brat/test/golden/error/inconsistentclauses.brat
f(Bool, Nat) -> Nat
f(true, n) = 1
f(b) = 2
